# attest-demo

./: .goreleaser.yaml  Dockerfile  README.md  action.yml  checksums.txt  index.js  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/actions/attest/: action.yml
.github/actions/debug/: action.yml
.github/actions/push-detector/: action.yml  main.js  post.js  watcher.js
.github/workflows/: big.yml  build.yml  buildah.yml  checksums.yml  custom-predicate-image.yml  custom-predicate.yml  empty.yml  fulcio.yml  glob.yml  goreleaser.yml  image.yml  memcached.yml  multisub.yml  new-build-type.yml  oci-amazon.yml  oci-aws.yml  oci-azure.yml  oci-docker-hub.yml  oci-github.yml  oci-google.yml  oci-google2.yml  oci-multi.yml  oidc.yml  provenance-image.yml  provenance.yml  publish-action-package.yml  sbom-image.yml  sbom.yml  self.yml  shared.yml  staging-tma.yml  subject_digest.yml  test.yml  tsa.yml  wap.yml  windows.yml
projects/go-img/: .goreleaser.yaml  Dockerfile
src/github-provenance-demo/: __init__.py
token/: index.js  package-lock.json  package.json
